test/errors/packages_error/zs/transitive_import_error.zs
package transitive_import_error;

import middle_structure.*;

struct TopStructure
{
    MiddleStructure middleStructure;
    BottomStructure bottomStructure;
};
